# zarrify

./: .gitignore  README.md  config_example.yaml  config_zarr2_to_zarr3.yaml  pyproject.toml
.github/workflows/: ci.yaml
config_examples/: config_example.yaml
src/zarrify/: __about__.py  to_zarr.py
src/zarrify/formats/: mrc.py  mrc_3d.py  n5.py  tiff.py  tiff_3d.py  tiff_stack.py  zarr2.py
src/zarrify/multiscale/: pydantic_models.py  to_multiscale.py
src/zarrify/utils/: dask_utils.py  pydantic_models.py  ts_utils.py  volume.py  zarr_utils.py
tests/: __init__.py  test_expand_dims_and_4d.py  test_metadata.py  test_to_zarr.py
tests/utils/: test_dask_client.py
