[project]
name = "zarrify"
version = "0.0.3"
description = ""
authors = [
    { name = "Yurii Zubov", email = "zubov452@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "click>=8.1.8,<9.0.0",
    "colorama>=0.4.6,<0.5.0",
    "dask>=2024.12.1,<2025.0.0",
    "dask-jobqueue==0.8.2",
    "imagecodecs>=2024.12.30,<2025.0.0",
    "mrcfile>=1.5.3,<2.0.0",
    "natsort>=8.4.0,<9.0.0",
    "numcodecs==0.15.1",
    "pydantic-zarr>=0.4.0,<1.0.0",
    "pint>=0.20.0,<1.0.0",
    "tifffile>=2025.1.10,<2026.0.0",
    "zarr==2.18.3"
]

[project.scripts]
zarrify = "zarrify.to_zarr:cli"

[project.optional-dependencies]
test = [
    "pytest"
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
